# CosHelper

./: .gitignore  gradle.properties  settings.gradle.kts
app/: build.gradle.kts  lint.xml  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  opus_jni.cpp  whisper_jni.cpp
app/src/main/java/com/coshelper/: CosHelperApplication.kt  MainActivity.kt
app/src/main/java/com/coshelper/audio/: AudioPlayer.kt  AudioRecorder.kt  AudioRouter.kt  OpusCodec.kt
app/src/main/java/com/coshelper/chat/: ChatService.kt  ChatViewModel.kt  HotspotChatManager.kt  NearbyChatManager.kt
app/src/main/java/com/coshelper/data/: AudioSettingsRepository.kt
app/src/main/java/com/coshelper/ptt/: PTTAccessibilityService.kt
app/src/main/java/com/coshelper/rvc/: RvcForegroundService.kt  RvcManager.kt  RvcProcessor.kt
app/src/main/java/com/coshelper/stt/: SttManager.kt  WhisperJNI.kt
app/src/main/java/com/coshelper/ui/components/: AudioDevicePicker.kt  BottomActionBar.kt  FeatureTile.kt  RoundedPttButton.kt  StatusChip.kt
app/src/main/java/com/coshelper/ui/screens/: ChatScreen.kt  RvcScreen.kt  SettingsScreen.kt  SttScreen.kt
app/src/main/java/com/coshelper/ui/theme/: Theme.kt  Type.kt
app/src/main/java/com/coshelper/utils/: AppLogger.kt  LogExporter.kt  UriUtils.kt
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: accessibility_service_config.xml
docs/: ui-ux-overhaul-plan.md  verification-summary.md
tools/: chat_peer.py
